--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@grapp/nextra-theme",
   "version": "0.2.2",
   "license": "MIT",
-  "module": "src/index.ts",
+  "source": "src/index.ts",
   "files": [
     "package.json",
     "config",
