--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@grapp/ts-config/default.json",
+  "extends": "@grapp/ts-config/react-native.json",
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
 }
