--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@grapp/nextra-theme",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "license": "MIT",
-  "source": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "src/index.ts",
   "files": [
     "package.json",
     "config",
