--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,17 @@
 {
   "extends": "@grapp/ts-config/react-native.json",
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules"]
+  "compilerOptions": {
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "emitDeclarationOnly": false,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "jsx": "preserve",
+    "noPropertyAccessFromIndexSignature": false
+  },
+  "include": ["./src/**/*", "./config/**/*"]
 }
